--- a/src/assets/scss/cheat-form.scss
+++ b/src/assets/scss/cheat-form.scss
@@ -2,6 +2,7 @@ form{
     border: 1px solid #30363d;
     border-radius: 15px;
     padding: 1em;
+    margin-top: 1em;
     margin-bottom: 1em;
     color: #666;
     
