Lgogin form and tag selector

--- a/src/assets/scss/tag-selector.scss
+++ b/src/assets/scss/tag-selector.scss
@@ -34,3 +34,10 @@
 .tag-wrapper {
   cursor: pointer;
 }
+
+.tag-lables{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5px;
+}
