--- a/src/assets/scss/cheat-form.scss
+++ b/src/assets/scss/cheat-form.scss
@@ -1,47 +1,64 @@
-form{
-    border: 1px solid #30363d;
-    border-radius: 15px;
-    padding: 1em;
-    margin-top: 1em;
+form {
+  border: 1px solid #30363d;
+  border-radius: 15px;
+  padding: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  color: #666;
+
+  .input-unit {
     margin-bottom: 1em;
-    color: #666;
-    
-    .input-unit{
-        margin-bottom: 1em;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5em;
-        width: 100%;
-        
-        input,textarea{
-            border: 1px solid #30363d;
-            font-size: 1.4rem;
-            padding: 0.5em;
-            border-radius: 5px;
-            background-color: #000;
-            color: #666;
-            
-            &:focus{
-                border: 1px solid #4e7ec6;
-                outline: 0;
-            }
-        }
-        button{
-            background-color: #4ec6563d;
-            color: #fff;
-            border: 0;
-            border-radius: 15px;
-            padding: 0.5em 2em;
-            font-size: 1.4rem;
-            transition: 300ms;
-            white-space: nowrap; 
-            align-self: center; 
-    
-            &:hover{
-                background-color:#4ec656;
-                cursor: pointer;
-            }
-        }
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    width: 100%;
+
+    input,
+    textarea {
+      border: 1px solid #30363d;
+      font-size: 1.4rem;
+      padding: 0.5em;
+      border-radius: 5px;
+      background-color: #000;
+      color: #666;
+
+      &:focus {
+        border: 1px solid #4e7ec6;
+        outline: 0;
+      }
+    }
+    button {
+      background-color: #4ec6563d;
+      color: #fff;
+      border: 0;
+      border-radius: 15px;
+      padding: 0.5em 2em;
+      font-size: 1.4rem;
+      transition: 300ms;
+      white-space: nowrap;
+      align-self: center;
+
+      &:hover {
+        background-color: #4ec656;
+        cursor: pointer;
+      }
     }
 
+    
+  }
+  .dynamic-input-control-unit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1em;
+    gap: 0.5em;
+    width: 100%;
+
+    .action-btn {
+        cursor: pointer;
+        color: #4ec656;
+        font-size: 1.5rem;
+        align-self: flex-end;
+      }
+  }
 }
