--- a/src/assets/scss/loading.scss
+++ b/src/assets/scss/loading.scss
@@ -1,28 +1,28 @@
 .loader{
-    // background-color: #daa5203d;
+    background-color: #0000003d;
     color: #daa520;
     height: 100vh;
-    width: '100%';
+    width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    position: fixed;
     
 }
-
-
 .loading {
     height: 0;
     width: 0;
     padding: 15px;
-    border: 6px solid #daa520;
+    border: 2px solid #daa520;
     border-right-color: #daa5203d;
     border-radius: 22px;
     animation: rotate 300ms infinite linear;
     /* left, top and position just for the demo! */
-    position: absolute;
-    left: 50%;
-    top: 50%;
-  }
+    position: fixed;
+    // left: 50%;
+    // top: 50%;
+    z-index: 9999;
+  } 
   
   @keyframes rotate {
     /* 100% keyframe for  clockwise. 
@@ -31,3 +31,4 @@
       -webkit-transform: rotate(360deg);
     }
   }
+
