--- a/src/assets/scss/main-layout.scss
+++ b/src/assets/scss/main-layout.scss
@@ -71,6 +71,7 @@ body {
 
 .main-wrapper {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
