--- a/src/assets/scss/login-form.scss
+++ b/src/assets/scss/login-form.scss
@@ -5,6 +5,10 @@ form{
     margin-top: 1em;
     margin-bottom: 1em;
     color: #666;
+    // background-color: #000;
+    // -webkit-box-shadow:0px 0px 18px 4px #4ec6563d;
+    // -moz-box-shadow: 0px 0px 18px 4px #4ec6563d;
+    // box-shadow: 0px 0px 18px 4px #4ec6563d;
     
     .input-unit{
         margin-bottom: 1em;
@@ -13,11 +17,11 @@ form{
         gap: 0.5em;
         width: 100%;
         
-        input,textarea{
+        input,textarea,select,option{
             border: 1px solid #30363d;
-            font-size: 1.4rem;
             padding: 0.5em;
             border-radius: 5px;
+            font-size: 1.4rem;
             background-color: #000;
             color: #666;
             
