letter avatar component

--- a/src/assets/scss/navbar-prime.scss
+++ b/src/assets/scss/navbar-prime.scss
@@ -7,4 +7,6 @@
     background-color: #000000;
     border-bottom: 1px solid #30363d;
     color: white;
+    padding: 0 40px;
+    justify-content: flex-end;
 }
