--- a/src/assets/scss/navbar-prime.scss
+++ b/src/assets/scss/navbar-prime.scss
@@ -1,5 +1,6 @@
 .navbar-prime{
     display: flex;
+    gap: 1em;
     justify-content: center;
     align-items: center;
     height: 90px;
@@ -9,4 +10,38 @@
     color: white;
     padding: 0 40px;
     justify-content: flex-end;
+    position: relative;
+
+    .projects-list{
+        position: absolute;
+        top: 80%;
+        right: 40px;
+        width: 100%;
+        background-color: #000;
+        border: 1px solid #30363d;
+        border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        background-color: #000;
+        width: 200px;
+
+        .project{
+            font-size: 1rem;
+            cursor: pointer;
+            padding: 15px 0;
+            border-bottom: 1px solid #30363d;
+            &:hover{
+                background-color: #30363d;
+            }
+        }
+    }
+
+    .project-selector{
+        font-size: 1rem;
+        border: 1px solid #30363d;
+        padding: 0.5em 1em;
+        border-radius: 5px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
 }
