--- a/src/assets/scss/selection-list.scss
+++ b/src/assets/scss/selection-list.scss
@@ -1,4 +1,4 @@
-.projects-list {
+.selection-list {
   position: absolute;
   top: 80%;
   right: 40px;
@@ -11,7 +11,7 @@
   background-color: #000;
   width: 200px;
 
-  .project {
+  .list-item {
     font-size: 1rem;
     cursor: pointer;
     padding: 15px 0;
@@ -22,11 +22,3 @@
   }
 }
 
-.project-selector {
-  font-size: 1rem;
-  border: 1px solid #30363d;
-  padding: 0.5em 1em;
-  border-radius: 5px;
-  cursor: pointer;
-  border-radius: 5px;
-}
