--- a/src/assets/scss/selection-list.scss
+++ b/src/assets/scss/selection-list.scss
@@ -1,15 +1,16 @@
 .selection-list {
   position: absolute;
-  top: 80%;
-  right: 40px;
+  top: 70px;
+  left: 40px;
   width: 100%;
   background-color: #000;
   border: 1px solid #30363d;
-  border-radius: 15px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   background-color: #000;
   width: 200px;
+  overflow: hidden;
 
   .list-item {
     font-size: 1rem;
