--- a/src/assets/scss/icon-button.scss
+++ b/src/assets/scss/icon-button.scss
@@ -2,8 +2,13 @@
   line-height: 0;
   font-size: 1.1rem;
   border: 1px solid #30363d;
+  background-color: #0d1017;
   padding: 0.5em 1em;
   border-radius: 5px;
   cursor: pointer;
-  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  font-weight: 200;
 }
