--- a/src/assets/scss/yes-no-dialog-modal.scss
+++ b/src/assets/scss/yes-no-dialog-modal.scss
@@ -1,58 +1,70 @@
-.confirm-dialog {
+.confirm-dialog-wrapper {
+  background-color: #0000005c;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 50%;
-  background-color: #161b21;
-  border: 1px solid #30363d;
-  border-radius: 15px;
-  padding: 1em;
-  color: #666;
-
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 1em;
-  font-size: 1.4rem;
-
-  button {
-    border: 0;
+  z-index: 99;
+  .confirm-dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    background-color: #161b21;
+    border: 1px solid #30363d;
     border-radius: 15px;
-    padding: 0.5em 2em;
-    font-size: 1.4rem;
-    transition: 300ms;
-    white-space: nowrap;
-    align-self: center;
-  }
-  .message {
-    text-align: center;
-  }
+    padding: 1em;
+    color: white;
 
-  .actions {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 1em;
+    font-size: 1rem;
 
-    .confirm {
-      background-color: #ff44443d;
-      color: #ff4444;
-
-      &:hover{
-        background-color: #ff4444;
-        color: #fff;
-        cursor: pointer;
-      }
+    button {
+      border: 0;
+      border-radius: 5px;
+      padding: 0.5em 2em;
+      font-size: 1rem;
+      transition: 300ms;
+      white-space: nowrap;
+      align-self: center;
+    }
+    .message {
+      text-align: center;
     }
 
-    .cancel {
-        background-color: #4e7ec63d;
-        color: #4e7ec6;
+    .actions {
+      display: flex;
+      gap: 1em;
 
-        &:hover{
+      .confirm {
+        background-color: rgb(227, 0, 0);
+        color: white;
+
+        &:hover {
+          background-color: #ff0000;
+          color: #fff;
+          cursor: pointer;
+        }
+      }
+
+      .cancel {
+        background-color: #4e7ec6;
+        color: white;
+
+        &:hover {
           background-color: #4e7ec6;
           color: #fff;
           cursor: pointer;
         }
+      }
     }
   }
 }
