--- a/src/assets/scss/icon-button.scss
+++ b/src/assets/scss/icon-button.scss
@@ -11,4 +11,10 @@
   align-items: center;
   gap: 5px;
   font-weight: 200;
+
+  transition: 300ms;
+
+  &:hover {
+    background-color: #30363d;
+  }
 }
