--- a/src/assets/scss/auth-link.scss
+++ b/src/assets/scss/auth-link.scss
@@ -1,10 +1,14 @@
 .icon-link {
-    line-height: 0;
-  font-size: 1.1rem;
-  color: rgb(76, 175, 80);
+  font-size: 1rem;
   border: 1px solid #30363d;
   padding: 0.5em 1em;
   border-radius: 5px;
   cursor: pointer;
-  border-radius: 5px;
+  text-decoration: none;
+  color: #fff;
+  transition: 300ms;
+
+  &:hover {
+    background-color: #30363d;
+  }
 }
