--- a/src/assets/scss/main-layout.scss
+++ b/src/assets/scss/main-layout.scss
@@ -82,6 +82,8 @@ body {
   align-items: center;
   width: 100%;
   min-height: 100vh;
+  position: relative;
+  z-index: 1;
 }
 
 // .main-container {
