experimental txt editor : issue editor value is not saved ⚠️

--- a/src/assets/scss/cheat-form.scss
+++ b/src/assets/scss/cheat-form.scss
@@ -32,12 +32,12 @@ form {
       }
     }
     button {
-      background-color: #4ec6563d;
+      background-color: #3a8a3f;
       color: #fff;
       border: 0;
-      border-radius: 15px;
+      border-radius: 5px;
       padding: 0.5em 2em;
-      font-size: 1.4rem;
+      font-size: 1rem;
       transition: 300ms;
       white-space: nowrap;
       align-self: center;
@@ -61,7 +61,7 @@ form {
     .action-btn {
         cursor: pointer;
         color: #4ec656;
-        font-size: 1.5rem;
+        font-size: 1.1rem;
         align-self: flex-end;
       }
   }
