--- a/src/assets/scss/cheat-item.scss
+++ b/src/assets/scss/cheat-item.scss
@@ -31,15 +31,16 @@
     }
   }
   .cheat-title {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 300;
     margin-bottom: 0.5em;
-    color: #4e7ec6;
+    color: #06c;
+    text-align: left;
   }
 
   .cheat-text {
     margin-bottom: 0.5em;
-    font-size: 1.1rem;
+    font-size: 1rem;
     color: #666;
 
     text-align: left;
