--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -6,7 +6,7 @@
   // border-radius:0 15px 15px 0;
   padding: 1em;
   // margin-bottom: 1em;
-  width: 400px;
+  // width: 400px; // overridden by config file
   position: fixed;
   top: 90px;
   left: 0;
