--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ code {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #0d1017; 
+  background-color: #0d101700; 
   -webkit-border-radius: 10px;
   border-radius: 10px;
 }
