✅ field value issue fix

--- a/src/assets/scss/cheat-form.scss
+++ b/src/assets/scss/cheat-form.scss
@@ -20,8 +20,8 @@ form {
     input,
     textarea {
       border: 1px solid #30363d;
-      font-size: 1.4rem;
-      padding: 0.5em;
+      font-size: 1rem;
+      padding: 0.8em 1em;
       border-radius: 15px;
       background-color: #000;
       color: #666;
