article form update an lightshot image component

--- a/src/assets/scss/article-form.scss
+++ b/src/assets/scss/article-form.scss
@@ -12,7 +12,7 @@ form {
     width: 100%;
     gap: 1em;
     // background-color: #30363d;
-    height: 90%;
+    height: 80%;
     position: relative;
 
     .right{
@@ -33,6 +33,7 @@ form {
 
     p{
       margin: 0;
+      text-align: left;
     }
 
     label{
