--- a/src/assets/scss/quill/RichTextEditor.scss
+++ b/src/assets/scss/quill/RichTextEditor.scss
@@ -72,7 +72,7 @@
 .ql-container {
   .ql-editor {
     min-height: 110px;
-    background-color: #0d1017;
+    background-color: #000;
     color: #666;
     padding: 20px;
     border-radius: 0 0 15px 15px;
