--- a/src/assets/scss/subject-selector.scss
+++ b/src/assets/scss/subject-selector.scss
@@ -21,15 +21,17 @@
         color: #fff;
         font-size: 1em;
         padding: 0.5em;
+        width: 100%;
       }
   
       .subject-tag {
         background-color: #21262d;
         color: #fff;
-        padding: 0.2em 0.5em;
+        padding: 0.2em 0.2em;
         margin: 0.2em;
         border-radius: 10px;
         display: flex;
+        gap: 10px;
         align-items: center;
   
         button {
