--- a/src/assets/scss/article-form.scss
+++ b/src/assets/scss/article-form.scss
@@ -2,8 +2,7 @@ form {
   // border: 1px solid #30363d;
   border-radius: 15px;
   padding: 1em;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin:0;
   color: #666;
   height: 100%;
 
