--- a/src/assets/scss/navbar-prime.scss
+++ b/src/assets/scss/navbar-prime.scss
@@ -15,6 +15,11 @@
 
     .brand-logo{
         font-size: 2.5rem;
+
+        img{
+            width: 40px;
+            height: 40px;
+        }
     }
 
     .left, .right{
