--- a/src/assets/scss/subject-selector.scss
+++ b/src/assets/scss/subject-selector.scss
@@ -11,7 +11,7 @@
       flex-wrap: wrap;
       align-items: center;
       min-height: 40px;
-      margin-bottom: 1em;
+      // margin-bottom: 1em;
   
       input {
         flex: 1;
