--- a/src/assets/scss/subject-selector.scss
+++ b/src/assets/scss/subject-selector.scss
@@ -34,7 +34,7 @@
         gap: 10px;
         align-items: center;
   
-        button {
+        span {
           background: none;
           border: none;
           color: #fff;
