--- a/src/assets/scss/sidebar.scss
+++ b/src/assets/scss/sidebar.scss
@@ -18,6 +18,7 @@
   .sidebar-section {
     margin-bottom: 2em;
     border-bottom: 1px solid #30363d;
+    padding-bottom: 2em;
     
     h3 {
       color: #9e9e9e;
