--- a/src/assets/scss/cheat-item.scss
+++ b/src/assets/scss/cheat-item.scss
@@ -1,6 +1,8 @@
+@import 'variables';
+
 .cheat-item {
-  border: 1px solid #30363d;
-  border-radius: 15px;
+  border: 1px solid $borderGray;
+  border-radius: $radius15;
   padding: 1em;
   margin-bottom: 1em;
   width: 100%;
@@ -20,7 +22,7 @@
     position: absolute;
     top: 15px;
     right: 25px;      
-    color: #707883;
+    color: $secondaryTextGray;
     font-size: 1.4rem;
     margin: 0;
     padding: 5px;
@@ -30,7 +32,7 @@
     &:hover{
       color: white;
       cursor: pointer;
-      background-color: #66666694;
+      background-color: $hoverBgGray;
     }
   }
   .cheat-title {
@@ -38,18 +40,19 @@
     font-weight: 300;
     margin-bottom: 0.5em;
     text-align: left;
+    color: $primaryTextBlue;
   }
 
   .cheat-text {
     margin-bottom: 0.5em;
     font-size: 1rem;
-    color: #666;
+    color: $textGray;
 
     text-align: left;
     overflow-wrap: anywhere;
 
     strong{
-      color: #73998d;
+      color: $secondaryTextGray;
     }
   }
   
@@ -59,12 +62,12 @@
     align-items: center;
     .edit-btn {
       cursor: pointer;
-      color: #4ec656;
+      color: $btnGreen;
       font-size: 1.5rem;
     }
     .delete-btn {
       cursor: pointer;
-      color: #ff4444;
+      color: $brightRed;
       font-size: 1.5rem;
     }
   }
